# StumpEngine

./: .gitignore  Stump.sln
Stump/: AABB.cpp  AABB.h  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Component.h  CubeShape.cpp  CubeShape.h  ElementsBufferObj.cpp  ElementsBufferObj.h  EngineModeLayer.cpp  EngineModeLayer.h  Event.h  GameObject.cpp  GameObject.h  InputEvents.h  InputManager.cpp  InputManager.h  Layer.cpp  Layer.h  Material.cpp  Material.h  Math.cpp  Math.h  Matrix3x3.cpp  Matrix3x3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4x4.cpp  Matrix4x4.h  Mesh.cpp  Mesh.h  MeshInstance.cpp  MeshInstance.h  Model.cpp  Model.h  (+66 more)
Stump/Core/: Application.cpp  Application.h  Event.h  InputEvents.h  Layer.cpp  Layer.h  Window.cpp  Window.h  WindowEvents.h
Stump/Engine/: CMakeLists.txt
Stump/Engine/Assets/: default.frag  default.vert
Stump/Engine/Audio/: AudioBuffer.cpp  AudioBuffer.h  AudioDevice.cpp  AudioDevice.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h
Stump/Engine/Components/: AudioSourceComponent.cpp  AudioSourceComponent.h  CameraComponent.cpp  CameraComponent.h  ColliderComponent.cpp  ColliderComponent.h  Component.h  LightComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  RigidBodyComponent.cpp  RigidBodyComponent.h
Stump/Engine/Core/: Application.cpp  Application.h  Engine.cpp  Engine.h  InputEvents.h  InputManager.cpp  InputManager.h  Layer.cpp  Layer.h  Window.cpp  Window.h  WindowEvents.h
Stump/Engine/Core/Layers/: EditorModeLayer.cpp  EditorModeLayer.h  EngineModeLayer.cpp  EngineModeLayer.h  GuiLayer.cpp  GuiLayer.h  PlayModeLayer.cpp  PlayModeLayer.h
Stump/Engine/GUI/: FileSystemWindow.cpp  FileSystemWindow.h  GuiWindow.h  HierarchyWindow.cpp  HierarchyWindow.h  LogWindow.cpp  LogWindow.h  ViewportWindow.cpp  ViewportWindow.h
Stump/Engine/Main/: main.cpp
Stump/Engine/Math/: AABB.cpp  AABB.h  MathF.cpp  MathF.h  Matrix3x3.cpp  Matrix3x3.h  Matrix3x4.cpp  Matrix3x4.h  Matrix4x4.cpp  Matrix4x4.h  Plane.cpp  Plane.h  Quaternion.cpp  Quaternion.h  Typedefs.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
Stump/Engine/Physic/: Collider.cpp  Collider.h  PhysicWorld.cpp  PhysicWorld.h  RigidBody.cpp  RigidBody.h
Stump/Engine/Rendering/: Camera.cpp  Camera.h  LightSystem.cpp  LightSystem.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderManager.cpp  RenderManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h
Stump/Engine/Rendering/Buffers/: ElementsBufferObj.cpp  ElementsBufferObj.h  VertexArrayObj.cpp  VertexArrayObj.h  VertexBufferObj.cpp  VertexBufferObj.h
Stump/Engine/Rendering/Shapes/: CubeShape.cpp  CubeShape.h  PlaneShape.cpp  PlaneShape.h  Shape.cpp  Shape.h  SphereShape.cpp  SphereShape.h
Stump/Engine/Resources/: default.frag
Stump/Engine/Scene/: GameObject.cpp  GameObject.h  MeshInstance.cpp  MeshInstance.h  Object.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h
Stump/Engine/Tests/: PerformanceTest.h
Stump/Engine/Utility/: DefaultSceneFactory.h  ModelData.cpp  ModelData.h
Stump/Libraries/include/glad/: glad.h
Stump/Libraries/lib/: glfw3.lib
